call history and clear functionality added

--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
                         <div class=" bg-red-200 p-4 rounded-2xl">
                             <img class="max-w-[40px]" src="./assets/emergency.png" alt="Emergency">
                         </div>
-                        <i class="fa-regular fa-heart text-2xl heart"></i>
+                        <i class="fa-regular fa-heart text-2xl heart cursor-pointer"></i>
                     </div>
                     <div class="my-6">
-                        <h3 class="font-bold text-xl">National Emergency Number</h3>
+                        <h3 class="font-bold text-xl service-heading">National Emergency Number</h3>
                         <p class="text-sm text-gray-500 service-name">National Emergency</p>
                     </div>
                     <div class="mb-6">
@@ -85,7 +85,8 @@
                     <div class="grid grid-cols-2 gap-3">
                         <button class="btn btn-outline border-gray-300 text-gray-500 font-normal"><i
                                 class="fa-solid fa-copy"></i>Copy</button>
-                        <button class="btn btn-active btn-success border-none bg-green-600 text-white font-normal call-btn"><i
+                        <button
+                            class="btn btn-active btn-success border-none bg-green-600 text-white font-normal call-btn"><i
                                 class="fa-solid fa-phone"></i>Call</button>
                     </div>
                 </div>
@@ -94,10 +95,10 @@
                         <div class=" bg-blue-200 p-4 rounded-2xl">
                             <img class="max-w-[40px]" src="./assets/police.png" alt="Police">
                         </div>
-                        <i class="fa-regular fa-heart text-2xl heart"></i>
+                        <i class="fa-regular fa-heart text-2xl heart cursor-pointer"></i>
                     </div>
                     <div class="my-6">
-                        <h3 class="font-bold text-xl">Police Helpline Number</h3>
+                        <h3 class="font-bold text-xl service-heading">Police Helpline Number</h3>
                         <p class="text-sm text-gray-500 service-name">Police</p>
                     </div>
                     <div class="mb-6">
@@ -107,7 +108,8 @@
                     <div class="grid grid-cols-2 gap-3">
                         <button class="btn btn-outline border-gray-300 text-gray-500 font-normal"><i
                                 class="fa-solid fa-copy"></i>Copy</button>
-                        <button class="btn btn-active btn-success border-none bg-green-600 text-white font-normal call-btn"><i
+                        <button
+                            class="btn btn-active btn-success border-none bg-green-600 text-white font-normal call-btn"><i
                                 class="fa-solid fa-phone"></i>Call</button>
                     </div>
                 </div>
@@ -116,10 +118,10 @@
                         <div class=" bg-red-200 p-4 rounded-2xl">
                             <img class="max-w-[40px]" src="./assets/fire-service.png" alt="Emergency">
                         </div>
-                        <i class="fa-regular fa-heart text-2xl heart"></i>
+                        <i class="fa-regular fa-heart text-2xl heart cursor-pointer"></i>
                     </div>
                     <div class="my-6">
-                        <h3 class="font-bold text-xl">Fire Service Number</h3>
+                        <h3 class="font-bold text-xl service-heading">Fire Service Number</h3>
                         <p class="text-sm text-gray-500 service-name">Fire Service</p>
                     </div>
                     <div class="mb-6">
@@ -129,7 +131,8 @@
                     <div class="grid grid-cols-2 gap-3">
                         <button class="btn btn-outline border-gray-300 text-gray-500 font-normal"><i
                                 class="fa-solid fa-copy"></i>Copy</button>
-                        <button class="btn btn-active btn-success border-none bg-green-600 text-white font-normal call-btn"><i
+                        <button
+                            class="btn btn-active btn-success border-none bg-green-600 text-white font-normal call-btn"><i
                                 class="fa-solid fa-phone"></i>Call</button>
                     </div>
                 </div>
@@ -138,10 +141,10 @@
                         <div class=" bg-red-200 p-4 rounded-2xl">
                             <img class="max-w-[40px]" src="./assets/ambulance.png" alt="Emergency">
                         </div>
-                        <i class="fa-regular fa-heart text-2xl heart"></i>
+                        <i class="fa-regular fa-heart text-2xl heart cursor-pointer"></i>
                     </div>
                     <div class="my-6">
-                        <h3 class="font-bold text-xl">Ambulance Service</h3>
+                        <h3 class="font-bold text-xl service-heading">Ambulance Service</h3>
                         <p class="text-sm text-gray-500 service-name">Ambulance</p>
                     </div>
                     <div class="mb-6">
@@ -151,7 +154,8 @@
                     <div class="grid grid-cols-2 gap-3">
                         <button class="btn btn-outline border-gray-300 text-gray-500 font-normal"><i
                                 class="fa-solid fa-copy"></i>Copy</button>
-                        <button class="btn btn-active btn-success border-none bg-green-600 text-white font-normal call-btn"><i
+                        <button
+                            class="btn btn-active btn-success border-none bg-green-600 text-white font-normal call-btn"><i
                                 class="fa-solid fa-phone"></i>Call</button>
                     </div>
                 </div>
@@ -160,10 +164,10 @@
                         <div class=" bg-red-200 p-4 rounded-2xl">
                             <img class="max-w-[40px]" src="./assets/emergency.png" alt="Emergency">
                         </div>
-                        <i class="fa-regular fa-heart text-2xl heart"></i>
+                        <i class="fa-regular fa-heart text-2xl heart cursor-pointer"></i>
                     </div>
                     <div class="my-6">
-                        <h3 class="font-bold text-xl">Women & Child Helpline</h3>
+                        <h3 class="font-bold text-xl service-heading">Women & Child Helpline</h3>
                         <p class="text-sm text-gray-500 service-name">Women & Child Helpline</p>
                     </div>
                     <div class="mb-6">
@@ -173,7 +177,8 @@
                     <div class="grid grid-cols-2 gap-3">
                         <button class="btn btn-outline border-gray-300 text-gray-500 font-normal"><i
                                 class="fa-solid fa-copy"></i>Copy</button>
-                        <button class="btn btn-active btn-success border-none bg-green-600 text-white font-normal call-btn"><i
+                        <button
+                            class="btn btn-active btn-success border-none bg-green-600 text-white font-normal call-btn"><i
                                 class="fa-solid fa-phone"></i>Call</button>
                     </div>
                 </div>
@@ -182,10 +187,10 @@
                         <div class=" bg-red-200 p-4 rounded-2xl">
                             <img class="max-w-[40px]" src="./assets/emergency.png" alt="Emergency">
                         </div>
-                        <i class="fa-regular fa-heart text-2xl heart"></i>
+                        <i class="fa-regular fa-heart text-2xl heart cursor-pointer"></i>
                     </div>
                     <div class="my-6">
-                        <h3 class="font-bold text-xl">Anti-Corruption Helpline</h3>
+                        <h3 class="font-bold text-xl service-heading">Anti-Corruption Helpline</h3>
                         <p class="text-sm text-gray-500 service-name">Anti-Corruption</p>
                     </div>
                     <div class="mb-6">
@@ -195,7 +200,8 @@
                     <div class="grid grid-cols-2 gap-3">
                         <button class="btn btn-outline border-gray-300 text-gray-500 font-normal"><i
                                 class="fa-solid fa-copy"></i>Copy</button>
-                        <button class="btn btn-active btn-success border-none bg-green-600 text-white font-normal call-btn"><i
+                        <button
+                            class="btn btn-active btn-success border-none bg-green-600 text-white font-normal call-btn"><i
                                 class="fa-solid fa-phone"></i>Call</button>
                     </div>
                 </div>
@@ -204,10 +210,10 @@
                         <div class=" bg-red-200 p-4 rounded-2xl">
                             <img class="max-w-[40px]" src="./assets/emergency.png" alt="Emergency">
                         </div>
-                        <i class="fa-regular fa-heart text-2xl heart"></i>
+                        <i class="fa-regular fa-heart text-2xl heart cursor-pointer"></i>
                     </div>
                     <div class="my-6">
-                        <h3 class="font-bold text-xl">Electricity Helpline</h3>
+                        <h3 class="font-bold text-xl service-heading">Electricity Helpline</h3>
                         <p class="text-sm text-gray-500 service-name">Electricity Outage</p>
                     </div>
                     <div class="mb-6">
@@ -217,7 +223,8 @@
                     <div class="grid grid-cols-2 gap-3">
                         <button class="btn btn-outline border-gray-300 text-gray-500 font-normal"><i
                                 class="fa-solid fa-copy"></i>Copy</button>
-                        <button class="btn btn-active btn-success border-none bg-green-600 text-white font-normal call-btn"><i
+                        <button
+                            class="btn btn-active btn-success border-none bg-green-600 text-white font-normal call-btn"><i
                                 class="fa-solid fa-phone"></i>Call</button>
                     </div>
                 </div>
@@ -226,10 +233,10 @@
                         <div class=" bg-red-200 p-4 rounded-2xl">
                             <img class="max-w-[40px]" src="./assets/brac.png" alt="Emergency">
                         </div>
-                        <i class="fa-regular fa-heart text-2xl heart"></i>
+                        <i class="fa-regular fa-heart text-2xl heart cursor-pointer"></i>
                     </div>
                     <div class="my-6">
-                        <h3 class="font-bold text-xl">Brac Helpline</h3>
+                        <h3 class="font-bold text-xl service-heading">Brac Helpline</h3>
                         <p class="text-sm text-gray-500 service-name">Brac</p>
                     </div>
                     <div class="mb-6">
@@ -239,7 +246,8 @@
                     <div class="grid grid-cols-2 gap-3">
                         <button class="btn btn-outline border-gray-300 text-gray-500 font-normal"><i
                                 class="fa-solid fa-copy"></i>Copy</button>
-                        <button class="btn btn-active btn-success border-none bg-green-600 text-white font-normal call-btn"><i
+                        <button
+                            class="btn btn-active btn-success border-none bg-green-600 text-white font-normal call-btn"><i
                                 class="fa-solid fa-phone"></i>Call</button>
                     </div>
                 </div>
@@ -248,10 +256,10 @@
                         <div class=" bg-red-200 p-4 rounded-2xl">
                             <img class="max-w-[40px]" src="./assets/Bangladesh-Railway.png" alt="Emergency">
                         </div>
-                        <i class="fa-regular fa-heart text-2xl heart"></i>
+                        <i class="fa-regular fa-heart text-2xl heart cursor-pointer"></i>
                     </div>
                     <div class="my-6">
-                        <h3 class="font-bold text-xl">Bangladesh Railway Helpline </h3>
+                        <h3 class="font-bold text-xl service-heading">Bangladesh Railway Helpline </h3>
                         <p class="text-sm text-gray-500 service-name">Bangladesh Railway</p>
                     </div>
                     <div class="mb-6">
@@ -261,20 +269,22 @@
                     <div class="grid grid-cols-2 gap-3">
                         <button class="btn btn-outline border-gray-300 text-gray-500 font-normal"><i
                                 class="fa-solid fa-copy"></i>Copy</button>
-                        <button class="btn btn-active btn-success border-none bg-green-600 text-white font-normal call-btn"><i
+                        <button
+                            class="btn btn-active btn-success border-none bg-green-600 text-white font-normal call-btn"><i
                                 class="fa-solid fa-phone"></i>Call</button>
                     </div>
                 </div>
             </section>
-            <aside class="lg:col-span-3 p-5 col-span-12 bg-white">
+            <aside class="lg:col-span-3 p-3 col-span-12 bg-white" id="call-history">
                 <div class="flex justify-between items-center">
                     <div>
                         <i class="fa-regular fa-clock text-gray-500"></i>
                         <span class="font-semibold">Call History</span>
                     </div>
                     <button
-                        class="btn btn-active btn-success border-none bg-green-600 text-white font-normal px-7 py-4 rounded-full">Clear</button>
+                        class="btn btn-active btn-success border-none bg-green-600 text-white font-normal px-7 py-4 rounded-full" id="clear-btn">Clear</button>
                 </div>
+                <div id="history-container"></div>
             </aside>
         </div>
 
@@ -282,7 +292,7 @@
 
 
 
-<script src="./js/index.js"></script>
+    <script src="./js/index.js"></script>
 
 </body>
 
