--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </div>
                 <div
                     class="flex flex-col-reverse items-center md:flex-row gap-3 p-3 md:py-4 md:px-9 bg-[#00A63E] text-white md:rounded-full font-bold rounded-2xl">
-                    <h3>0</h3> Copy
+                    <h3 id="copy-count">0</h3> Copy
                 </div>
             </div>
         </nav>
@@ -83,7 +83,7 @@
                         <button class="btn btn-soft rounded-full text-gray-500 font-light">All</button>
                     </div>
                     <div class="grid grid-cols-2 gap-3">
-                        <button class="btn btn-outline border-gray-300 text-gray-500 font-normal"><i
+                        <button class="btn btn-outline border-gray-300 text-gray-500 font-normal copy-btn"><i
                                 class="fa-solid fa-copy"></i>Copy</button>
                         <button
                             class="btn btn-active btn-success border-none bg-green-600 text-white font-normal call-btn"><i
@@ -106,7 +106,7 @@
                         <button class="btn btn-soft rounded-full text-gray-500 font-light">Police</button>
                     </div>
                     <div class="grid grid-cols-2 gap-3">
-                        <button class="btn btn-outline border-gray-300 text-gray-500 font-normal"><i
+                        <button class="btn btn-outline border-gray-300 text-gray-500 font-normal copy-btn"><i
                                 class="fa-solid fa-copy"></i>Copy</button>
                         <button
                             class="btn btn-active btn-success border-none bg-green-600 text-white font-normal call-btn"><i
@@ -129,7 +129,7 @@
                         <button class="btn btn-soft rounded-full text-gray-500 font-light">Fire</button>
                     </div>
                     <div class="grid grid-cols-2 gap-3">
-                        <button class="btn btn-outline border-gray-300 text-gray-500 font-normal"><i
+                        <button class="btn btn-outline border-gray-300 text-gray-500 font-normal copy-btn"><i
                                 class="fa-solid fa-copy"></i>Copy</button>
                         <button
                             class="btn btn-active btn-success border-none bg-green-600 text-white font-normal call-btn"><i
@@ -152,7 +152,7 @@
                         <button class="btn btn-soft rounded-full text-gray-500 font-light">Health</button>
                     </div>
                     <div class="grid grid-cols-2 gap-3">
-                        <button class="btn btn-outline border-gray-300 text-gray-500 font-normal"><i
+                        <button class="btn btn-outline border-gray-300 text-gray-500 font-normal copy-btn"><i
                                 class="fa-solid fa-copy"></i>Copy</button>
                         <button
                             class="btn btn-active btn-success border-none bg-green-600 text-white font-normal call-btn"><i
@@ -175,7 +175,7 @@
                         <button class="btn btn-soft rounded-full text-gray-500 font-light">Help</button>
                     </div>
                     <div class="grid grid-cols-2 gap-3">
-                        <button class="btn btn-outline border-gray-300 text-gray-500 font-normal"><i
+                        <button class="btn btn-outline border-gray-300 text-gray-500 font-normal copy-btn"><i
                                 class="fa-solid fa-copy"></i>Copy</button>
                         <button
                             class="btn btn-active btn-success border-none bg-green-600 text-white font-normal call-btn"><i
@@ -198,7 +198,7 @@
                         <button class="btn btn-soft rounded-full text-gray-500 font-light">Govt.</button>
                     </div>
                     <div class="grid grid-cols-2 gap-3">
-                        <button class="btn btn-outline border-gray-300 text-gray-500 font-normal"><i
+                        <button class="btn btn-outline border-gray-300 text-gray-500 font-normal copy-btn"><i
                                 class="fa-solid fa-copy"></i>Copy</button>
                         <button
                             class="btn btn-active btn-success border-none bg-green-600 text-white font-normal call-btn"><i
@@ -221,7 +221,7 @@
                         <button class="btn btn-soft rounded-full text-gray-500 font-light">Electricity</button>
                     </div>
                     <div class="grid grid-cols-2 gap-3">
-                        <button class="btn btn-outline border-gray-300 text-gray-500 font-normal"><i
+                        <button class="btn btn-outline border-gray-300 text-gray-500 font-normal copy-btn"><i
                                 class="fa-solid fa-copy"></i>Copy</button>
                         <button
                             class="btn btn-active btn-success border-none bg-green-600 text-white font-normal call-btn"><i
@@ -244,7 +244,7 @@
                         <button class="btn btn-soft rounded-full text-gray-500 font-light">NGO</button>
                     </div>
                     <div class="grid grid-cols-2 gap-3">
-                        <button class="btn btn-outline border-gray-300 text-gray-500 font-normal"><i
+                        <button class="btn btn-outline border-gray-300 text-gray-500 font-normal copy-btn"><i
                                 class="fa-solid fa-copy"></i>Copy</button>
                         <button
                             class="btn btn-active btn-success border-none bg-green-600 text-white font-normal call-btn"><i
@@ -267,7 +267,7 @@
                         <button class="btn btn-soft rounded-full text-gray-500 font-light">Travel</button>
                     </div>
                     <div class="grid grid-cols-2 gap-3">
-                        <button class="btn btn-outline border-gray-300 text-gray-500 font-normal"><i
+                        <button class="btn btn-outline border-gray-300 text-gray-500 font-normal copy-btn"><i
                                 class="fa-solid fa-copy"></i>Copy</button>
                         <button
                             class="btn btn-active btn-success border-none bg-green-600 text-white font-normal call-btn"><i
