hovering effect added in heart icon

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 
 
-    <section class="bg-green-50 pt-10">
+    <section class="bg-green-50 py-10">
 
         <div class="grid grid-cols-12 w-11/12 mx-auto gap-x-0 gap-y-8 md:gap-8" id="phone-section">
             <section class="lg:col-span-9 col-span-12 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
@@ -72,7 +72,7 @@
                         <div class=" bg-red-200 p-4 rounded-2xl">
                             <img class="max-w-[40px]" src="./assets/emergency.png" alt="Emergency">
                         </div>
-                        <i class="fa-regular fa-heart text-2xl heart cursor-pointer"></i>
+                        <i class="fa-regular fa-heart text-2xl heart hover:scale-125 transition-transform active:text-red-600 cursor-pointer"></i>
                     </div>
                     <div class="my-6">
                         <h3 class="font-bold text-xl service-heading">National Emergency Number</h3>
@@ -95,7 +95,7 @@
                         <div class=" bg-blue-200 p-4 rounded-2xl">
                             <img class="max-w-[40px]" src="./assets/police.png" alt="Police">
                         </div>
-                        <i class="fa-regular fa-heart text-2xl heart cursor-pointer"></i>
+                        <i class="fa-regular fa-heart text-2xl heart hover:scale-125 transition-transform active:text-red-600 cursor-pointer"></i>
                     </div>
                     <div class="my-6">
                         <h3 class="font-bold text-xl service-heading">Police Helpline Number</h3>
@@ -118,7 +118,7 @@
                         <div class=" bg-red-200 p-4 rounded-2xl">
                             <img class="max-w-[40px]" src="./assets/fire-service.png" alt="Emergency">
                         </div>
-                        <i class="fa-regular fa-heart text-2xl heart cursor-pointer"></i>
+                        <i class="fa-regular fa-heart text-2xl heart hover:scale-125 transition-transform active:text-red-600 cursor-pointer"></i>
                     </div>
                     <div class="my-6">
                         <h3 class="font-bold text-xl service-heading">Fire Service Number</h3>
@@ -141,7 +141,7 @@
                         <div class=" bg-red-200 p-4 rounded-2xl">
                             <img class="max-w-[40px]" src="./assets/ambulance.png" alt="Emergency">
                         </div>
-                        <i class="fa-regular fa-heart text-2xl heart cursor-pointer"></i>
+                        <i class="fa-regular fa-heart text-2xl heart hover:scale-125 transition-transform active:text-red-600 cursor-pointer"></i>
                     </div>
                     <div class="my-6">
                         <h3 class="font-bold text-xl service-heading">Ambulance Service</h3>
@@ -164,7 +164,7 @@
                         <div class=" bg-red-200 p-4 rounded-2xl">
                             <img class="max-w-[40px]" src="./assets/emergency.png" alt="Emergency">
                         </div>
-                        <i class="fa-regular fa-heart text-2xl heart cursor-pointer"></i>
+                        <i class="fa-regular fa-heart text-2xl heart hover:scale-125 transition-transform active:text-red-600 cursor-pointer"></i>
                     </div>
                     <div class="my-6">
                         <h3 class="font-bold text-xl service-heading">Women & Child Helpline</h3>
@@ -187,7 +187,7 @@
                         <div class=" bg-red-200 p-4 rounded-2xl">
                             <img class="max-w-[40px]" src="./assets/emergency.png" alt="Emergency">
                         </div>
-                        <i class="fa-regular fa-heart text-2xl heart cursor-pointer"></i>
+                        <i class="fa-regular fa-heart text-2xl heart hover:scale-125 transition-transform active:text-red-600 cursor-pointer"></i>
                     </div>
                     <div class="my-6">
                         <h3 class="font-bold text-xl service-heading">Anti-Corruption Helpline</h3>
@@ -210,7 +210,7 @@
                         <div class=" bg-red-200 p-4 rounded-2xl">
                             <img class="max-w-[40px]" src="./assets/emergency.png" alt="Emergency">
                         </div>
-                        <i class="fa-regular fa-heart text-2xl heart cursor-pointer"></i>
+                        <i class="fa-regular fa-heart text-2xl heart hover:scale-125 transition-transform active:text-red-600 cursor-pointer"></i>
                     </div>
                     <div class="my-6">
                         <h3 class="font-bold text-xl service-heading">Electricity Helpline</h3>
@@ -233,7 +233,7 @@
                         <div class=" bg-red-200 p-4 rounded-2xl">
                             <img class="max-w-[40px]" src="./assets/brac.png" alt="Emergency">
                         </div>
-                        <i class="fa-regular fa-heart text-2xl heart cursor-pointer"></i>
+                        <i class="fa-regular fa-heart text-2xl heart hover:scale-125 transition-transform active:text-red-600 cursor-pointer"></i>
                     </div>
                     <div class="my-6">
                         <h3 class="font-bold text-xl service-heading">Brac Helpline</h3>
@@ -256,7 +256,7 @@
                         <div class=" bg-red-200 p-4 rounded-2xl">
                             <img class="max-w-[40px]" src="./assets/Bangladesh-Railway.png" alt="Emergency">
                         </div>
-                        <i class="fa-regular fa-heart text-2xl heart cursor-pointer"></i>
+                        <i class="fa-regular fa-heart text-2xl heart hover:scale-125 transition-transform active:text-red-600 cursor-pointer"></i>
                     </div>
                     <div class="my-6">
                         <h3 class="font-bold text-xl service-heading">Bangladesh Railway Helpline </h3>
